--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   smooth_page_indicator: ^1.1.0 # Or latest version
-  http: ^1.1.0
+  http: ^0.13.5
+  mongo_dart: ^0.9.0  # Add this line for MongoDB support
+  crypto: ^3.0.3  # Add this line for password hashing
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
