--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^0.13.5
   mongo_dart: ^0.9.0  # Add this line for MongoDB support
   crypto: ^3.0.3  # Add this line for password hashing
+  shared_preferences: ^2.2.0  # Add this line
+  image_picker: ^1.0.4  # Add this line for image picking
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
