--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   smooth_page_indicator: ^1.1.0 # Or latest version
-  http: ^0.13.5
-  mongo_dart: ^0.9.0  # Add this line for MongoDB support
+  http: ^1.1.0
+  mongo_dart: ^0.9.3  # Add this line for MongoDB support
   crypto: ^3.0.3  # Add this line for password hashing
-  shared_preferences: ^2.2.0  # Add this line
+  shared_preferences: ^2.2.2  # Add this line
   image_picker: ^1.0.4  # Add this line for image picking
+  intl: ^0.18.1 # Or your current version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
